* Transfer of all copyright notices from personal to Orbitz corporate.
* Ability to use regular expressions in the "run" command.

Change List For v0.8.6 (Language: Python / Status: In Progress)
---------------------------------------------------------------
* Cleanup: Added an autoconf script such that no matter where the package is installed
  or where Python is, we'll run with it.

Change List For v0.9.0 (Language: Python / Status: Not Started)
---------------------------------------------------------------
- Ability to use regular expressions in the "copy" command.
- Ability to load all environments at startup, then switch environments at runtime.
- Ability to use a new run command keyword: "parallel".
  This will run the given command in background processes in parallel.
  Output will be spooled to one file per server in a standard output directory.
- Ability to use a "set concurrency X" command to set the concurrency
  for parallel run.  Also XML config directives for global defaults.

Change List For v0.9.5 (Language: Python / Status: Not Started)
---------------------------------------------------------------
? Ability to have "pluggable" transports whereby one can at least use the "copy" and "run" commands
  via rsh, ssh, SSL, multicast, etc.  Will most likely use command-line as interface.

Small Feature TODO
------------------
- Server groups of server groups.
- Cleanup: Provide a larger set of example files.  Double-check doc.  Test like crazy.
- Ability to have batch mode report back with names of servers down and how many during a given run.
- Ability to run multiple commands using typical shell-style semicolon delimiter.

Large Feature TODO
------------------
- Ability to use "set password", along with password echo with or without remote sudo functionality.
- Ability to list servers who run a particular service.  Config file tags, etc.
- Installer: Using python's distuitls package, create a sane installer.