@@ -245,16 +245,18 @@ Change List For v0.8.6 (Language: Python / Status: In Progress)
 ---------------------------------------------------------------
 * Cleanup: Added an autoconf script such that no matter where the package is installed
   or where Python is, we'll run with it.
+* Cleanup: Replaced all highly unreadable "&" "|" characters with keyword equivalents.
+- Cleanup: Added logic to check config.xml for well-formedness before actual parsing.
+- Ability to load all environments at startup, then switch environments at runtime.
 
 Change List For v0.9.0 (Language: Python / Status: Not Started)
 ---------------------------------------------------------------
-- Ability to use regular expressions in the "copy" command.
-- Ability to load all environments at startup, then switch environments at runtime.
 - Ability to use a new run command keyword: "parallel".
   This will run the given command in background processes in parallel.
   Output will be spooled to one file per server in a standard output directory.
 - Ability to use a "set concurrency X" command to set the concurrency
   for parallel run.  Also XML config directives for global defaults.
+? Ability to use regular expressions in the "copy" command.
 
 Change List For v0.9.5 (Language: Python / Status: Not Started)
 ---------------------------------------------------------------
